# GT-media-app

./: README.md  pyproject.toml
gtmedia/: manage.py
gtmedia/core/: urls.py  views.py
gtmedia/gtmedia/: asgi.py  settings.py  urls.py  wsgi.py
