[tool.poetry]
name = "gt-media-app"
version = "0.1.0"
description = "Creating a social media application from scratch"
authors = ["aastha-batta <aasthabatta8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
